Library references fixed

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,12 +1,12 @@
 deploy.ant.properties.file=/Users/pelldav/Library/Application Support/NetBeans/7.3.1/config/GlassFishEE6/Properties/gfv3-1036983295.properties
-file.reference.asm-all-repackaged.jar=/Users/pelldav/University/Tesi/Interfaccia grafica/Netbeans-AuthenticationDemo/web/WEB-INF/lib
-file.reference.jackson-core-asl.jar=/Users/pelldav/University/Tesi/Interfaccia grafica/Netbeans-AuthenticationDemo/web/WEB-INF/lib
-file.reference.jackson-jaxrs.jar=/Users/pelldav/University/Tesi/Interfaccia grafica/Netbeans-AuthenticationDemo/web/WEB-INF/lib
-file.reference.jackson-mapper-asl.jar=/Users/pelldav/University/Tesi/Interfaccia grafica/Netbeans-AuthenticationDemo/web/WEB-INF/lib
-file.reference.jersey-gf-server.jar=/Users/pelldav/University/Tesi/Interfaccia grafica/Netbeans-AuthenticationDemo/web/WEB-INF/lib
-file.reference.jersey-multipart.jar=/Users/pelldav/University/Tesi/Interfaccia grafica/Netbeans-AuthenticationDemo/web/WEB-INF/lib
-file.reference.jettison.jar=/Users/pelldav/University/Tesi/Interfaccia grafica/Netbeans-AuthenticationDemo/web/WEB-INF/lib
-file.reference.mimepull.jar=/Users/pelldav/University/Tesi/Interfaccia grafica/Netbeans-AuthenticationDemo/web/WEB-INF/lib
+file.reference.asm-all-repackaged.jar=/Applications/NetBeans/glassfish-3.1.2/glassfish/modules/asm-all-repackaged.jar
+file.reference.jackson-core-asl.jar=/Applications/NetBeans/glassfish-3.1.2/glassfish/modules/jackson-core-asl.jar
+file.reference.jackson-jaxrs.jar=/Applications/NetBeans/glassfish-3.1.2/glassfish/modules/jackson-jaxrs.jar
+file.reference.jackson-mapper-asl.jar=/Applications/NetBeans/glassfish-3.1.2/glassfish/modules/jackson-mapper-asl.jar
+file.reference.jersey-gf-server.jar=/Applications/NetBeans/glassfish-3.1.2/glassfish/modules/jersey-gf-server.jar
+file.reference.jersey-multipart.jar=/Applications/NetBeans/glassfish-3.1.2/glassfish/modules/jersey-multipart.jar
+file.reference.jettison.jar=/Applications/NetBeans/glassfish-3.1.2/glassfish/modules/jettison.jar
+file.reference.mimepull.jar=/Applications/NetBeans/glassfish-3.1.2/glassfish/modules/mimepull.jar
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=/Applications/NetBeans/glassfish-4.0/glassfish/domains/domain1
 j2ee.server.home=/Applications/NetBeans/glassfish-4.0/glassfish
