--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,6 +37,7 @@ file.reference.jackson-jaxrs.jar=/Applications/NetBeans/glassfish-3.1.2/glassfis
 file.reference.jackson-mapper-asl-1.9.2.jar=web/WEB-INF/lib/jackson-mapper-asl-1.9.2.jar
 file.reference.jackson-mapper-asl.jar=/Applications/NetBeans/glassfish-3.1.2/glassfish/modules/jackson-mapper-asl.jar
 file.reference.jackson-xc-1.9.2.jar=web/WEB-INF/lib/jackson-xc-1.9.2.jar
+file.reference.JavaAPIforKml-sources.jar=web/WEB-INF/lib/JavaAPIforKml-sources.jar
 file.reference.jaxb-api-2.2.2.jar=web/WEB-INF/lib/jaxb-api-2.2.2.jar
 file.reference.jaxb-impl-2.2.3-1.jar=web/WEB-INF/lib/jaxb-impl-2.2.3-1.jar
 file.reference.jersey-core-1.11.jar=web/WEB-INF/lib/jersey-core-1.11.jar
@@ -82,7 +83,8 @@ javac.classpath=\
     ${file.reference.jettison.jar}:\
     ${file.reference.jersey-multipart.jar}:\
     ${file.reference.mimepull.jar}:\
-    ${file.reference.asm-all-repackaged.jar}
+    ${file.reference.asm-all-repackaged.jar}:\
+    ${file.reference.JavaAPIforKml-sources.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
