--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -28,6 +28,9 @@
     <listener>
         <listener-class>com.smart_leak_detection.web.listener.EventListener</listener-class>
     </listener>
+    <listener>
+        <listener-class>com.smart_leak_detection.data.DataListener</listener-class>
+    </listener>
     <login-config>
         <auth-method>FORM</auth-method>
         <realm-name>userMgmtJdbcRealm</realm-name>
