Gateway comunication fixed, bugs fixed

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,9 +32,7 @@ file.reference.apache-logging-log4j.jar=web/WEB-INF/lib/apache-logging-log4j.jar
 file.reference.asm-all-repackaged.jar=/Applications/NetBeans/glassfish-3.1.2/glassfish/modules/asm-all-repackaged.jar
 file.reference.commons-codec-1.6.jar=web/WEB-INF/lib/commons-codec-1.6.jar
 file.reference.dlmsAdapter-1.0-SNAPSHOT.jar=web/WEB-INF/lib/dlmsAdapter-1.0-SNAPSHOT.jar
-file.reference.gurux.common.jar=web/WEB-INF/lib/gurux.common.jar
-file.reference.gurux.dlms.jar=web/WEB-INF/lib/gurux.dlms.jar
-file.reference.gurux.net.jar=web/WEB-INF/lib/gurux.net.jar
+file.reference.GuruxDLMS-1.0.0.jar=web/WEB-INF/lib/GuruxDLMS-1.0.0.jar
 file.reference.jackson-core-asl-1.9.2.jar=web/WEB-INF/lib/jackson-core-asl-1.9.2.jar
 file.reference.jackson-core-asl.jar=/Applications/NetBeans/glassfish-3.1.2/glassfish/modules/jackson-core-asl.jar
 file.reference.jackson-jaxrs-1.9.2.jar=web/WEB-INF/lib/jackson-jaxrs-1.9.2.jar
@@ -90,11 +88,9 @@ javac.classpath=\
     ${file.reference.mimepull.jar}:\
     ${file.reference.asm-all-repackaged.jar}:\
     ${file.reference.java-api-for-kml.jar}:\
-    ${file.reference.gurux.common.jar}:\
-    ${file.reference.gurux.net.jar}:\
     ${file.reference.dlmsAdapter-1.0-SNAPSHOT.jar}:\
     ${file.reference.apache-logging-log4j.jar}:\
-    ${file.reference.gurux.dlms.jar}
+    ${file.reference.GuruxDLMS-1.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
