Some communication bugs fixed, GUI added

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -32,8 +32,8 @@
         <auth-method>FORM</auth-method>
         <realm-name>sldRealm</realm-name>
         <form-login-config>
-            <form-login-page>/login/login.jsp</form-login-page>
-            <form-error-page>/login/login.jsp?auth-error=1</form-error-page>
+            <form-login-page>/homepage.jsp</form-login-page>
+            <form-error-page>/homepage.jsp?auth-error=1</form-error-page>
         </form-login-config>
     </login-config>
     <!-- 
